# prts-recruit

./: Cargo.toml  Dockerfile
src/: bot.rs  lib.rs  main.rs  operator.rs  query.rs
src/resources/: operators.json  top_operators.json
