[package]
name = "prts_recruit"
version = "0.1.0"
authors = ["Dan <igaryhe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_plain = "0.3"
itertools = "0.9"
async-std = {version = "1.5", features = ["attributes"]}
surf = "2.0.0-alpha.4"
tide = "0.8"
telegram_types = "0.5"
anyhow = "1.0.31"
